add user v1 service and improve service registration
